[package]
name = "u-siem-sigma-engine"
version = "0.0.6"
authors = ["Samuel Garcés <samuel.garces@protonmail.com>"]
license = "MIT"
description = "uSIEM SIGMA rule engine"
repository = "https://github.com/u-siem/usiem-sigma-engine"
keywords = ["SIEM", "security", "logs","sigma","rule"]
categories = ["parsing"]
edition = "2018"

[lib]
name = "usiem_sigma_engine"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
u-siem = {version = "0.0"}
chrono = "0.4"
crossbeam-channel = { version = "0.5" }
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_yaml = "0.8"
regex = "1"
lazy_static = "1.4.0"